Moved completely to APInt. However, it is still incomplete and a few tests cases are still failing. We need to test APInt for multi words and single word more rigorously and also complete the APInt and APSInt functionality.